# hsbrotli

./: .gitignore  hsbrotli.cabal  stack.yaml
app/: Main.hs
cbits/brotli/: encode.h
cbits/enc/: encode.c
src/Codec/Compression/: Brotli.hs
src/Codec/Compression/Brotli/: Conduit.hs
src/Codec/Compression/Brotli/Internal/: FFI.hs
